.metadata/.plugins/org.eclipse.cdt.ui/03-21FileIO.build.log
14:47:30 **** Incremental Build of configuration Debug for project 03-21FileIO ****
make all 
Building file: ../src/03-21FileIO.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/03-21FileIO.d" -MT"src/03-21FileIO.o" -o "src/03-21FileIO.o" "../src/03-21FileIO.cpp"
../src/03-21FileIO.cpp: In function ‘int main()’:
../src/03-21FileIO.cpp:71:12: error: ‘x’ was not declared in this scope
  myFile >> x;  //to read
            ^
../src/03-21FileIO.cpp:75:21: error: expected primary-expression before ‘)’ token
  myFile.getline (---);
                     ^
make: *** [src/03-21FileIO.o] Error 1

14:47:30 Build Finished (took 480ms)

